--- a/template/template.html
+++ b/template/template.html
@@ -49,18 +49,10 @@
               </button>
               <ul class="desktopNav contain">
                 <li class="">
-                  <a
-                    href="#"
-                    js-nav-tier-toggle="Products"
-                    >Products-EN</a
-                  >
+                  <a href="#" js-nav-tier-toggle="Products">Products-EN</a>
                 </li>
                 <li class="">
-                  <a
-                    href="#"
-                    js-nav-tier-toggle="Recipes"
-                    >Recipes</a
-                  >
+                  <a href="#" js-nav-tier-toggle="Recipes">Recipes</a>
                 </li>
                 <li>
                   <a href="https://localhost:5002/en-gb/whats-new"
@@ -68,11 +60,7 @@
                   >
                 </li>
                 <li>
-                  <a
-                    href="#"
-                    js-nav-tier-toggle="More"
-                    >More</a
-                  >
+                  <a href="#" js-nav-tier-toggle="More">More</a>
                 </li>
               </ul>
               <a class="logo" href="https://localhost:5002/en-gb">Barilla</a>
@@ -1284,7 +1272,7 @@
       </nav>
 
       <main class="standardPage">
-              <!-- CONTENT -->
+        <!-- CONTENT -->
       </main>
 
       <footer>
@@ -1529,7 +1517,5 @@
         var layout = new Pages.Layouts.Layout();
       });
     </script>
-
-
   </body>
 </html>
