--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,6 +1,36 @@
-/*
-! tailwindcss v3.4.11 | MIT License | https://tailwindcss.com
-*/
+/* fonts */
+
+@font-face {
+  font-family: "AcuminProCondensed";
+
+  src: url("./fonts/acumin-pro-condensed-regular.otf") format("opentype");
+
+  font-weight: 400;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "AgipoBoldCondensed";
+
+  src: url("./fonts/agipo_bold_condensed-webfont.ttf") format("truetype");
+
+  font-weight: 700;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "NettoProBold";
+
+  src: url("./fonts/NettoPro-Bold.otf") format("opentype");
+
+  font-weight: 700;
+
+  font-style: normal;
+}
+
+/* ! tailwindcss v3.4.11 | MIT License | https://tailwindcss.com */
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -16,7 +46,7 @@
   /* 2 */
   border-style: solid;
   /* 2 */
-  border-color: #e5e7eb;
+  border-color: currentColor;
   /* 2 */
 }
 
@@ -446,6 +476,80 @@ video {
   display: none;
 }
 
+h1 {
+  font-family: AgipoBoldCondensed, sans-serif;
+  font-size: 30px;
+  line-height: 2.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  h1 {
+    font-size: 36px;
+    line-height: 44px;
+  }
+}
+
+@media (min-width: 1024px) {
+  h1 {
+    font-size: 48px;
+    line-height: 56px;
+  }
+}
+
+@media (min-width: 1240px) {
+  h1 {
+    font-size: 64px;
+    line-height: 64px;
+  }
+}
+
+h2 {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+p {
+  padding-bottom: 0px;
+  font-family: AcuminProCondensed, sans-serif;
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+span {
+  font-family: NettoProBold, sans-serif;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  letter-spacing: 0.08em;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+html {
+  scroll-snap-type: y mandatory;
+}
+
+section {
+  scroll-snap-align: start;
+}
+
+/* Optional: Smooth scrolling */
+
+html {
+  scroll-behavior: smooth;
+}
+
+body.scroll-down .bronzo-logo,
+  body.scroll-up .bronzo-logo {
+  display: none;
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -554,33 +658,1164 @@ video {
   --tw-contain-style:  ;
 }
 
-.bg-red-500 {
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1240px) {
+  .container {
+    max-width: 1240px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+  }
+}
+
+@media (min-width: 1650px) {
+  .container {
+    max-width: 1650px;
+  }
+}
+
+.our_container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+@media (min-width: 640px) {
+  .our_container {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .our_container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .our_container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1240px) {
+  .our_container {
+    max-width: 1240px;
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .our_container {
+    max-width: 1440px;
+  }
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.-bottom-20 {
+  bottom: -5rem;
+}
+
+.-bottom-\[15\%\] {
+  bottom: -15%;
+}
+
+.-top-\[150px\] {
+  top: -150px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.left-1\/2 {
+  left: 50%;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.z-40 {
+  z-index: 40;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.z-\[9999\] {
+  z-index: 9999;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.my-11 {
+  margin-top: 2.75rem;
+  margin-bottom: 2.75rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-9 {
+  margin-top: 2.25rem;
+}
+
+.block {
+  display: block;
+}
+
+.flex {
+  display: flex;
+}
+
+.hidden {
+  display: none;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-\[15\%\] {
+  height: 15%;
+}
+
+.h-\[160px\] {
+  height: 160px;
+}
+
+.h-\[20\%\] {
+  height: 20%;
+}
+
+.h-\[220px\] {
+  height: 220px;
+}
+
+.h-\[250px\] {
+  height: 250px;
+}
+
+.h-\[285px\] {
+  height: 285px;
+}
+
+.h-\[2px\] {
+  height: 2px;
+}
+
+.h-\[334px\] {
+  height: 334px;
+}
+
+.h-\[336px\] {
+  height: 336px;
+}
+
+.h-\[380px\] {
+  height: 380px;
+}
+
+.h-\[430px\] {
+  height: 430px;
+}
+
+.h-\[444px\] {
+  height: 444px;
+}
+
+.h-\[451px\] {
+  height: 451px;
+}
+
+.h-\[640px\] {
+  height: 640px;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.w-14 {
+  width: 3.5rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-\[180px\] {
+  width: 180px;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[210px\] {
+  width: 210px;
+}
+
+.w-\[250px\] {
+  width: 250px;
+}
+
+.w-\[260px\] {
+  width: 260px;
+}
+
+.w-\[280px\] {
+  width: 280px;
+}
+
+.w-\[294px\] {
+  width: 294px;
+}
+
+.w-\[300px\] {
+  width: 300px;
+}
+
+.w-\[312px\] {
+  width: 312px;
+}
+
+.w-\[320px\] {
+  width: 320px;
+}
+
+.w-\[328px\] {
+  width: 328px;
+}
+
+.w-\[340px\] {
+  width: 340px;
+}
+
+.w-\[68px\] {
+  width: 68px;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.max-w-8 {
+  max-width: 2rem;
+}
+
+.max-w-\[328px\] {
+  max-width: 328px;
+}
+
+.max-w-\[320px\] {
+  max-width: 320px;
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-b-xl {
+  border-bottom-right-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
+}
+
+.\!border-2 {
+  border-width: 2px !important;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
+.border-red {
+  --tw-border-opacity: 1;
+  border-color: rgb(163 55 53 / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.bg-blue {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  background-color: rgb(29 54 113 / var(--tw-bg-opacity));
 }
 
-.pt-80 {
-  padding-top: 20rem;
+.bg-bronze-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(151 125 87 / var(--tw-bg-opacity));
 }
 
-.pt-60 {
-  padding-top: 15rem;
+.bg-bronze-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(166 127 88 / var(--tw-bg-opacity));
 }
 
-.pt-40 {
-  padding-top: 10rem;
+.bg-red {
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 55 53 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.bg-hero-gradient {
+  background-image: linear-gradient(180deg, #470407 0%, #E3101F 74.5%, #470407 100%);
+}
+
+.bg-launch-hero-mobile {
+  background-image: url('./images/hero-mobile.webp');
+}
+
+.bg-launch-img-text-mobil {
+  background-image: url('./images/image-text-section/bg-mobil.webp');
+}
+
+.bg-launch-video-img {
+  background-image: url('./images/girl-bg.webp');
+}
+
+.bg-text-img-mobil {
+  background-image: url('./images/text-section/bg-mobil.webp');
+}
+
+.bg-video-img-mobil {
+  background-image: url('./images/teaser-video-section/bg-mobil.webp');
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-bottom {
+  background-position: bottom;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.object-right {
+  -o-object-position: right;
+     object-position: right;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pb-11 {
+  padding-bottom: 2.75rem;
+}
+
+.pb-14 {
+  padding-bottom: 3.5rem;
+}
+
+.pb-28 {
+  padding-bottom: 7rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.pt-14 {
+  padding-top: 3.5rem;
 }
 
 .pt-20 {
   padding-top: 5rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.font-acumin {
+  font-family: AcuminProCondensed, sans-serif;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.tracking-8percent {
+  letter-spacing: 0.08em;
+}
+
+.tracking-normal {
+  letter-spacing: 0em;
+}
+
+/*-------------- clippy paths---------- */
+
+.clippy {
+  clip-path: ellipse(52% 100% at 50% 0%);
+}
+
+.degree-section-clippy {
+  clip-path: ellipse(60% 50% at 50% 100%);
+}
+
+.card-clippy {
+  clip-path: polygon(
+    49% 12%,
+    100% 0,
+    100% 100%,
+    70% 100%,
+    30% 100%,
+    0 100%,
+    0 0
+  );
+}
+
+/*------------ end ------------- */
+
+@media (min-width: 640px) {
+  .sm\:h-\[500px\] {
+    height: 500px;
+  }
+
+  .sm\:h-\[900px\] {
+    height: 900px;
+  }
+
+  .sm\:w-\[380px\] {
+    width: 380px;
+  }
+
+  .sm\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .sm\:w-\[420px\] {
+    width: 420px;
+  }
+
+  .sm\:w-full {
+    width: 100%;
+  }
+
+  .sm\:bg-launch-img-text-desktop {
+    background-image: url('./images/image-text-section/bg-desktop.webp');
+  }
+
+  .sm\:pt-24 {
+    padding-top: 6rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:-top-\[120px\] {
+    top: -120px;
+  }
+
+  .md\:bottom-16 {
+    bottom: 4rem;
+  }
+
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .md\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
+
+  .md\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .md\:mt-12 {
+    margin-top: 3rem;
+  }
+
+  .md\:mt-16 {
+    margin-top: 4rem;
+  }
+
+  .md\:mt-3 {
+    margin-top: 0.75rem;
+  }
+
+  .md\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .md\:mt-9 {
+    margin-top: 2.25rem;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:h-\[1024px\] {
+    height: 1024px;
+  }
+
+  .md\:h-\[130px\] {
+    height: 130px;
+  }
+
+  .md\:h-\[148px\] {
+    height: 148px;
+  }
+
+  .md\:h-\[270px\] {
+    height: 270px;
+  }
+
+  .md\:h-\[419px\] {
+    height: 419px;
+  }
+
+  .md\:h-\[432px\] {
+    height: 432px;
+  }
+
+  .md\:h-\[440px\] {
+    height: 440px;
+  }
+
+  .md\:h-\[718px\] {
+    height: 718px;
+  }
+
+  .md\:w-20 {
+    width: 5rem;
+  }
+
+  .md\:w-\[110px\] {
+    width: 110px;
+  }
+
+  .md\:w-\[235px\] {
+    width: 235px;
+  }
+
+  .md\:w-\[250px\] {
+    width: 250px;
+  }
+
+  .md\:w-\[300px\] {
+    width: 300px;
+  }
+
+  .md\:w-\[370px\] {
+    width: 370px;
+  }
+
+  .md\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .md\:w-\[450px\] {
+    width: 450px;
+  }
+
+  .md\:w-\[454px\] {
+    width: 454px;
+  }
+
+  .md\:w-\[470px\] {
+    width: 470px;
+  }
+
+  .md\:w-\[500px\] {
+    width: 500px;
+  }
+
+  .md\:w-\[520px\] {
+    width: 520px;
+  }
+
+  .md\:w-\[560px\] {
+    width: 560px;
+  }
+
+  .md\:w-\[600px\] {
+    width: 600px;
+  }
+
+  .md\:w-full {
+    width: 100%;
+  }
+
+  .md\:max-w-\[486px\] {
+    max-width: 486px;
+  }
+
+  .md\:max-w-\[586px\] {
+    max-width: 586px;
+  }
+
+  .md\:bg-text-img-desktop {
+    background-image: url('./images/text-section/bg-desktop.webp');
+  }
+
+  .md\:bg-video-img-desktop {
+    background-image: url('./images/teaser-video-section/bg-desktop.webp');
+  }
+
+  .md\:pb-3 {
+    padding-bottom: 0.75rem;
+  }
+
+  .md\:pb-9 {
+    padding-bottom: 2.25rem;
+  }
+
+  .md\:pt-12 {
+    padding-top: 3rem;
+  }
+
+  .md\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .md\:text-\[64px\] {
+    font-size: 64px;
+  }
+
+  .md\:leading-\[77px\] {
+    line-height: 77px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:-bottom-\[25\%\] {
+    bottom: -25%;
+  }
+
+  .lg\:-top-\[180px\] {
+    top: -180px;
+  }
+
+  .lg\:bottom-0 {
+    bottom: 0px;
+  }
+
+  .lg\:mt-12 {
+    margin-top: 3rem;
+  }
+
+  .lg\:mt-4 {
+    margin-top: 1rem;
+  }
+
+  .lg\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .lg\:mt-9 {
+    margin-top: 2.25rem;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:h-\[155px\] {
+    height: 155px;
+  }
+
+  .lg\:h-\[182px\] {
+    height: 182px;
+  }
+
+  .lg\:h-\[25\%\] {
+    height: 25%;
+  }
+
+  .lg\:h-\[450px\] {
+    height: 450px;
+  }
+
+  .lg\:h-\[566px\] {
+    height: 566px;
+  }
+
+  .lg\:h-\[576px\] {
+    height: 576px;
+  }
+
+  .lg\:h-\[619px\] {
+    height: 619px;
+  }
+
+  .lg\:h-\[886px\] {
+    height: 886px;
+  }
+
+  .lg\:w-32 {
+    width: 8rem;
+  }
+
+  .lg\:w-\[262px\] {
+    width: 262px;
+  }
+
+  .lg\:w-\[263px\] {
+    width: 263px;
+  }
+
+  .lg\:w-\[350px\] {
+    width: 350px;
+  }
+
+  .lg\:w-\[360px\] {
+    width: 360px;
+  }
+
+  .lg\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .lg\:w-\[428px\] {
+    width: 428px;
+  }
+
+  .lg\:w-\[430px\] {
+    width: 430px;
+  }
+
+  .lg\:w-\[450px\] {
+    width: 450px;
+  }
+
+  .lg\:w-\[500px\] {
+    width: 500px;
+  }
+
+  .lg\:w-\[528px\] {
+    width: 528px;
+  }
+
+  .lg\:w-\[550px\] {
+    width: 550px;
+  }
+
+  .lg\:w-\[560px\] {
+    width: 560px;
+  }
+
+  .lg\:w-\[620px\] {
+    width: 620px;
+  }
+
+  .lg\:w-\[660px\] {
+    width: 660px;
+  }
+
+  .lg\:w-\[760px\] {
+    width: 760px;
+  }
+
+  .lg\:w-\[850px\] {
+    width: 850px;
+  }
+
+  .lg\:w-auto {
+    width: auto;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:max-w-\[802px\] {
+    max-width: 802px;
+  }
+
+  .lg\:max-w-\[850px\] {
+    max-width: 850px;
+  }
+
+  .lg\:max-w-\[870px\] {
+    max-width: 870px;
+  }
+
+  .lg\:bg-launch-hero-desktop {
+    background-image: url('./images/hero-desktop.webp');
+  }
+
+  .lg\:pb-12 {
+    padding-bottom: 3rem;
+  }
+
+  .lg\:pb-3 {
+    padding-bottom: 0.75rem;
+  }
+
+  .lg\:pb-36 {
+    padding-bottom: 9rem;
+  }
+
+  .lg\:pt-20 {
+    padding-top: 5rem;
+  }
+
+  .lg\:pt-48 {
+    padding-top: 12rem;
+  }
+
+  .lg\:pt-\[100px\] {
+    padding-top: 100px;
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+@media (min-width: 1240px) {
+  .xl\:h-\[1080px\] {
+    height: 1080px;
+  }
+
+  .xl\:h-\[200px\] {
+    height: 200px;
+  }
+
+  .xl\:h-\[400px\] {
+    height: 400px;
+  }
+
+  .xl\:h-\[708px\] {
+    height: 708px;
+  }
+
+  .xl\:h-\[720px\] {
+    height: 720px;
+  }
+
+  .xl\:w-40 {
+    width: 10rem;
+  }
+
+  .xl\:w-\[1020px\] {
+    width: 1020px;
+  }
+
+  .xl\:w-\[320px\] {
+    width: 320px;
+  }
+
+  .xl\:w-\[460px\] {
+    width: 460px;
+  }
+
+  .xl\:w-\[530px\] {
+    width: 530px;
+  }
+
+  .xl\:w-\[560px\] {
+    width: 560px;
+  }
+
+  .xl\:w-\[600px\] {
+    width: 600px;
+  }
+
+  .xl\:w-\[690px\] {
+    width: 690px;
+  }
+
+  .xl\:w-\[700px\] {
+    width: 700px;
+  }
+
+  .xl\:w-\[820px\] {
+    width: 820px;
+  }
+
+  .xl\:w-\[982px\] {
+    width: 982px;
+  }
+
+  .xl\:max-w-\[976px\] {
+    max-width: 976px;
+  }
+
+  .xl\:pt-72 {
+    padding-top: 18rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .\32xl\:h-\[1180px\] {
+    height: 1180px;
+  }
+
+  .\32xl\:h-\[800px\] {
+    height: 800px;
+  }
+
+  .\32xl\:h-\[808px\] {
+    height: 808px;
+  }
+
+  .\32xl\:w-\[730px\] {
+    width: 730px;
+  }
+
+  .\32xl\:pt-\[350px\] {
+    padding-top: 350px;
+  }
+
+  .\32xl\:text-\[85px\] {
+    font-size: 85px;
+  }
+
+  .\32xl\:leading-\[90px\] {
+    line-height: 90px;
+  }
+}
+
+@media (min-width: 1650px) {
+  .\33xl\:h-\[1320px\] {
+    height: 1320px;
+  }
+
+  .\33xl\:h-\[900px\] {
+    height: 900px;
+  }
 }
