--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -48,18 +48,18 @@
     @apply text-xs text-white font-netto tracking-8percent;
   }
 
-  /* html {
+  html {
     scroll-snap-type: y mandatory;
   }
 
   section {
     scroll-snap-align: start;
-  } */
+  }
 
   /* Optional: Smooth scrolling */
-  /* html {
+  html {
     scroll-behavior: smooth;
-  } */
+  }
 
   body.scroll-down .bronzo-logo,
   body.scroll-up .bronzo-logo {
