--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -641,21 +641,12 @@ span {
 
 html {
   scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
 }
 
 section {
   scroll-snap-align: start;
-}
-
-/* Optional: Smooth scrolling */
-
-html {
-  scroll-behavior: smooth;
-}
-
-body.scroll-down .bronzo-logo,
-  body.scroll-up .bronzo-logo {
-  display: none;
+  min-height: 100vh;
 }
 
 .container {
@@ -698,7 +689,7 @@ body.scroll-down .bronzo-logo,
   }
 }
 
-.our_container {
+.custom-container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 1rem;
@@ -706,26 +697,26 @@ body.scroll-down .bronzo-logo,
 }
 
 @media (min-width: 640px) {
-  .our_container {
+  .custom-container {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
   }
 }
 
 @media (min-width: 768px) {
-  .our_container {
+  .custom-container {
     max-width: 768px;
   }
 }
 
 @media (min-width: 1024px) {
-  .our_container {
+  .custom-container {
     max-width: 1024px;
   }
 }
 
 @media (min-width: 1240px) {
-  .our_container {
+  .custom-container {
     max-width: 1240px;
     padding-left: 5rem;
     padding-right: 5rem;
@@ -733,7 +724,7 @@ body.scroll-down .bronzo-logo,
 }
 
 @media (min-width: 1440px) {
-  .our_container {
+  .custom-container {
     max-width: 1440px;
   }
 }
@@ -746,10 +737,6 @@ body.scroll-down .bronzo-logo,
   position: relative;
 }
 
-.inset-0 {
-  inset: 0px;
-}
-
 .-bottom-20 {
   bottom: -5rem;
 }
@@ -760,10 +747,6 @@ body.scroll-down .bronzo-logo,
 
 .-top-\[150px\] {
   top: -150px;
-}
-
-.bottom-0 {
-  bottom: 0px;
 }
 
 .bottom-10 {
@@ -794,20 +777,12 @@ body.scroll-down .bronzo-logo,
   top: 50%;
 }
 
-.-z-10 {
-  z-index: -10;
-}
-
 .z-0 {
   z-index: 0;
 }
 
 .z-10 {
   z-index: 10;
-}
-
-.z-20 {
-  z-index: 20;
 }
 
 .z-40 {
@@ -832,20 +807,16 @@ body.scroll-down .bronzo-logo,
   margin-bottom: 2.75rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mb-6 {
   margin-bottom: 1.5rem;
 }
 
-.mb-\[70px\] {
-  margin-bottom: 70px;
-}
-
 .mt-10 {
   margin-top: 2.5rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
 }
 
 .mt-6 {
@@ -858,10 +829,6 @@ body.scroll-down .bronzo-logo,
 
 .mt-9 {
   margin-top: 2.25rem;
-}
-
-.mt-\[70px\] {
-  margin-top: 70px;
 }
 
 .block {
@@ -882,10 +849,6 @@ body.scroll-down .bronzo-logo,
 
 .h-\[15\%\] {
   height: 15%;
-}
-
-.h-\[160px\] {
-  height: 160px;
 }
 
 .h-\[20\%\] {
@@ -968,16 +931,8 @@ body.scroll-down .bronzo-logo,
   width: 1rem;
 }
 
-.w-40 {
-  width: 10rem;
-}
-
 .w-44 {
   width: 11rem;
-}
-
-.w-48 {
-  width: 12rem;
 }
 
 .w-80 {
@@ -1036,16 +991,16 @@ body.scroll-down .bronzo-logo,
   width: 340px;
 }
 
-.w-\[68px\] {
-  width: 68px;
-}
-
 .w-full {
   width: 100%;
 }
 
 .max-w-8 {
   max-width: 2rem;
+}
+
+.max-w-\[312px\] {
+  max-width: 312px;
 }
 
 .max-w-\[320px\] {
@@ -1086,10 +1041,6 @@ body.scroll-down .bronzo-logo,
   justify-content: center;
 }
 
-.justify-between {
-  justify-content: space-between;
-}
-
 .gap-3 {
   gap: 0.75rem;
 }
@@ -1108,28 +1059,6 @@ body.scroll-down .bronzo-logo,
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
-.rounded-b-xl {
-  border-bottom-right-radius: 0.75rem;
-  border-bottom-left-radius: 0.75rem;
-}
-
-.\!border-2 {
-  border-width: 2px !important;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-blue {
@@ -1157,6 +1086,10 @@ body.scroll-down .bronzo-logo,
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-david-oldani {
+  background-image: url('./images/davide-oldani.png');
+}
+
 .bg-hero-gradient {
   background-image: linear-gradient(180deg, #470407 0%, #E3101F 74.5%, #470407 100%);
 }
@@ -1165,16 +1098,8 @@ body.scroll-down .bronzo-logo,
   background-image: url('./images/hero-mobile.webp');
 }
 
-.bg-launch-img-text-mobil {
-  background-image: url('./images/image-text-section/bg-mobil.webp');
-}
-
-.bg-text-img-mobil {
-  background-image: url('./images/text-section/bg-mobil.webp');
-}
-
-.bg-video-img-mobil {
-  background-image: url('./images/teaser-video-section/bg-mobil.webp');
+.bg-launch-img-text-mobile {
+  background-image: url('./images/bg-mobile.webp');
 }
 
 .bg-cover {
@@ -1189,14 +1114,13 @@ body.scroll-down .bronzo-logo,
   background-position: center;
 }
 
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.object-right {
-  -o-object-position: right;
-     object-position: right;
 }
 
 .py-12 {
@@ -1209,17 +1133,8 @@ body.scroll-down .bronzo-logo,
   padding-bottom: 4rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .pb-10 {
   padding-bottom: 2.5rem;
-}
-
-.pb-11 {
-  padding-bottom: 2.75rem;
 }
 
 .pb-14 {
@@ -1254,10 +1169,6 @@ body.scroll-down .bronzo-logo,
   padding-top: 5rem;
 }
 
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
 .pt-4 {
   padding-top: 1rem;
 }
@@ -1282,17 +1193,27 @@ body.scroll-down .bronzo-logo,
   font-family: AcuminProCondensed, sans-serif;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.uppercase {
-  text-transform: uppercase;
+.font-bold {
+  font-weight: 700;
 }
 
-.tracking-8percent {
-  letter-spacing: 0.08em;
+.uppercase {
+  text-transform: uppercase;
 }
 
 .tracking-normal {
@@ -1324,6 +1245,40 @@ body.scroll-down .bronzo-logo,
     0 100%,
     0 0
   );
+}
+
+.bronzo-logo {
+  transition: opacity 0.3s ease-out;
+}
+
+.bronzo-logo.fade-out {
+  opacity: 0;
+}
+
+@keyframes jump-arrow {
+  0%,
+  20%,
+  55%,
+  80%,
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  40% {
+    transform: translate3d(0, -15px, 0);
+  }
+
+  70% {
+    transform: translate3d(0, -10px, 0);
+  }
+
+  90% {
+    transform: translate3d(0, -5px, 0);
+  }
+}
+
+.bounce-animation {
+  animation: jump-arrow 2.5s infinite;
 }
 
 /*------------ end ------------- */
@@ -1371,11 +1326,6 @@ body.scroll-down .bronzo-logo,
     bottom: 4rem;
   }
 
-  .md\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-
   .md\:mb-10 {
     margin-bottom: 2.5rem;
   }
@@ -1388,18 +1338,6 @@ body.scroll-down .bronzo-logo,
     margin-top: 3rem;
   }
 
-  .md\:mt-28 {
-    margin-top: 7rem;
-  }
-
-  .md\:mt-3 {
-    margin-top: 0.75rem;
-  }
-
-  .md\:mt-6 {
-    margin-top: 1.5rem;
-  }
-
   .md\:block {
     display: block;
   }
@@ -1410,14 +1348,6 @@ body.scroll-down .bronzo-logo,
 
   .md\:h-\[1024px\] {
     height: 1024px;
-  }
-
-  .md\:h-\[130px\] {
-    height: 130px;
-  }
-
-  .md\:h-\[148px\] {
-    height: 148px;
   }
 
   .md\:h-\[270px\] {
@@ -1442,14 +1372,6 @@ body.scroll-down .bronzo-logo,
 
   .md\:w-20 {
     width: 5rem;
-  }
-
-  .md\:w-80 {
-    width: 20rem;
-  }
-
-  .md\:w-\[110px\] {
-    width: 110px;
   }
 
   .md\:w-\[250px\] {
@@ -1504,6 +1426,10 @@ body.scroll-down .bronzo-logo,
     width: 100%;
   }
 
+  .md\:max-w-\[400px\] {
+    max-width: 400px;
+  }
+
   .md\:max-w-\[486px\] {
     max-width: 486px;
   }
@@ -1512,20 +1438,8 @@ body.scroll-down .bronzo-logo,
     max-width: 586px;
   }
 
-  .md\:bg-text-img-desktop {
-    background-image: url('./images/text-section/bg-desktop.webp');
-  }
-
-  .md\:bg-video-img-desktop {
-    background-image: url('./images/teaser-video-section/bg-desktop.webp');
-  }
-
   .md\:pb-3 {
     padding-bottom: 0.75rem;
-  }
-
-  .md\:pb-9 {
-    padding-bottom: 2.25rem;
   }
 
   .md\:pt-12 {
@@ -1536,12 +1450,18 @@ body.scroll-down .bronzo-logo,
     padding-top: 4rem;
   }
 
-  .md\:pt-5 {
-    padding-top: 1.25rem;
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .md\:text-\[64px\] {
     font-size: 64px;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .md\:leading-\[77px\] {
@@ -1562,28 +1482,12 @@ body.scroll-down .bronzo-logo,
     bottom: 0px;
   }
 
-  .lg\:mb-\[100px\] {
-    margin-bottom: 100px;
-  }
-
   .lg\:mt-12 {
     margin-top: 3rem;
   }
 
-  .lg\:mt-36 {
-    margin-top: 9rem;
-  }
-
-  .lg\:mt-4 {
-    margin-top: 1rem;
-  }
-
   .lg\:mt-6 {
     margin-top: 1.5rem;
-  }
-
-  .lg\:mt-9 {
-    margin-top: 2.25rem;
   }
 
   .lg\:block {
@@ -1592,14 +1496,6 @@ body.scroll-down .bronzo-logo,
 
   .lg\:hidden {
     display: none;
-  }
-
-  .lg\:h-\[155px\] {
-    height: 155px;
-  }
-
-  .lg\:h-\[182px\] {
-    height: 182px;
   }
 
   .lg\:h-\[25\%\] {
@@ -1636,10 +1532,6 @@ body.scroll-down .bronzo-logo,
 
   .lg\:w-\[360px\] {
     width: 360px;
-  }
-
-  .lg\:w-\[380px\] {
-    width: 380px;
   }
 
   .lg\:w-\[400px\] {
@@ -1694,12 +1586,12 @@ body.scroll-down .bronzo-logo,
     width: 660px;
   }
 
-  .lg\:w-auto {
-    width: auto;
-  }
-
   .lg\:w-full {
     width: 100%;
+  }
+
+  .lg\:max-w-\[500px\] {
+    max-width: 500px;
   }
 
   .lg\:max-w-\[802px\] {
@@ -1712,10 +1604,6 @@ body.scroll-down .bronzo-logo,
 
   .lg\:bg-launch-hero-desktop {
     background-image: url('./images/hero-desktop.webp');
-  }
-
-  .lg\:pb-12 {
-    padding-bottom: 3rem;
   }
 
   .lg\:pb-3 {
@@ -1742,15 +1630,21 @@ body.scroll-down .bronzo-logo,
     font-size: 1.5rem;
     line-height: 2rem;
   }
+
+  .lg\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1240px) {
   .xl\:h-\[1080px\] {
     height: 1080px;
-  }
-
-  .xl\:h-\[200px\] {
-    height: 200px;
   }
 
   .xl\:h-\[400px\] {
@@ -1775,10 +1669,6 @@ body.scroll-down .bronzo-logo,
 
   .xl\:w-\[1020px\] {
     width: 1020px;
-  }
-
-  .xl\:w-\[400px\] {
-    width: 400px;
   }
 
   .xl\:w-\[430px\] {
@@ -1823,6 +1713,10 @@ body.scroll-down .bronzo-logo,
 
   .xl\:w-\[820px\] {
     width: 820px;
+  }
+
+  .xl\:max-w-\[690px\] {
+    max-width: 690px;
   }
 
   .xl\:max-w-\[976px\] {
