--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -26,7 +26,7 @@
 @tailwind utilities;
 
 @layer components {
-  .our_container {
+  .custom-container {
     @apply md:max-w-[768px] lg:max-w-[1024px] xl:max-w-[1240px] 2xl:max-w-[1440px] mx-auto 
            px-4 sm:px-10 xl:px-20;
   }
@@ -50,20 +50,12 @@
 
   html {
     scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
   }
 
   section {
     scroll-snap-align: start;
-  }
-
-  /* Optional: Smooth scrolling */
-  html {
-    scroll-behavior: smooth;
-  }
-
-  body.scroll-down .bronzo-logo,
-  body.scroll-up .bronzo-logo {
-    display: none;
+    min-height: 100vh;
   }
 }
 
@@ -86,4 +78,39 @@
     0 0
   );
 }
+
+.bronzo-logo {
+  transition: opacity 0.3s ease-out;
+}
+
+.bronzo-logo.fade-out {
+  opacity: 0;
+}
+
+@keyframes jump-arrow {
+  0%,
+  20%,
+  55%,
+  80%,
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  40% {
+    transform: translate3d(0, -15px, 0);
+  }
+
+  70% {
+    transform: translate3d(0, -10px, 0);
+  }
+
+  90% {
+    transform: translate3d(0, -5px, 0);
+  }
+}
+
+.bounce-animation {
+  animation: jump-arrow 2.5s infinite;
+}
+
 /*------------ end ------------- */
